<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#0099cc"
		android:orientation="vertical">

		<Button
			android:id="@+id/button_floating_pictures"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:text="@string/button_floating_pictures" />

		<Button
			android:id="@+id/button_floating_videos"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_below="@+id/button_floating_pictures"
			android:layout_marginTop="5dp"
			android:text="@string/button_floating_videos" />

		<Button
			android:id="@+id/button_floating_both"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_floating_videos"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="5dp"
			android:text="@string/button_floating_both" />

	</RelativeLayout>