<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_both"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_copy_video"
        android:layout_centerHorizontal="true"
        android:text="@string/button_copy_both"
        android:enabled="true" />

    <Button
        android:id="@+id/button_copy_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/button_copy_video"
        android:enabled="true" />

    <Button
        android:id="@+id/button_copy_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_copy_video"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:text="@string/button_copy_picture" />

</RelativeLayout>